# infers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analysis/: count_v3_funnel.py  counterfactual.py  decompose_runners.py  expiry_sensitivity.py  fsm_journals_v2.json  funnel_summary.json  funnel_summary_v2.json  inspect_trade.py  instrumented_replay.py  phase_a_deep_analysis.md  verdict_stats.py
data/: xauusd_m15.parquet  xauusd_m30.parquet
docs/: demo-runbook.md  entry-methodology.md  live-startup-runbook.md  phase1-architecture.md  phase2-architecture.md
reports/: README.md
reports/atr_trend_scalp_full/: health_check.md
reports/rule_addsl_macro/: report.html
reports/rule_g2families/: report.html
reports/rule_riskfix/: health_check.md
reports/rule_wave2_exitfix/: report.html
reports/rule_wave2_fix1/: report.html
reports/smc_bos_full/: report.html  report_data.js
src/infers/: __init__.py  journal.py  main.py
src/infers/ai/: __init__.py  batch.py  gateway.py  passthrough.py  rule_judge.py
src/infers/analysis/: __init__.py  confluence.py  dow.py  elliot.py  fibonacci.py  future_discretion.py  indicators.py  micro.py  support_resistance.py  zigzag.py
tests/: test_ai_backtest.py  test_analysis.py  test_atr_trend_scalp.py  test_confluence.py  test_dashboard.py  test_elliot_fib.py  test_execution.py  test_future.py  test_integration.py  test_journal.py  test_market_tpsl.py  test_models.py  test_mt5_feed.py  test_passthrough.py  test_phase10_fixes.py  test_report_html.py  test_rule_judge.py  test_slicing.py  test_smc_bos.py
(+66 files in other folders)
